# devenv

./: .actrc  .craft.yml  .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  bootstrap.py  constants.py  devenv  doctor.py  install-devenv.sh  lib.py  lol.py  main.py  pin_gha.py  pyproject.toml  pythons.py  requirements-dev.in  setup.cfg  sync.py  tox.ini
.claude/: settings.json
.github/workflows/: bootstrap.yml  build.yml  install-devenv.yml  integration.yml  lint.yml  release.yml  test.yml
ci/: bump-version.sh  devenv-bootstrap.sh  devenv-post-bootstrap.sh  install-devenv-checks.sh
ci/integration/repo/devenv/: config.ini  sync.py
devenv/: __main__.py  bootstrap.py  colima.py  constants.py  context.py  delete.py  doctor.py  exec.py  fetch.py  healthchecks.py  main.py  pin_gha.py  pythons.py  sync.py  update.py  var.py
devenv/checks/: colimaDiskSpace.py  colimaSsh.py  credsStore.py  diskfree.py  dockerConfig.py  dockerDesktop.py  failing_check_with_no_fix.py  limaDns.py  no_check.py  no_name.py  no_tags.py  test.py
devenv/commands/: bootstrap.py  doctor.py  fetch.py  pin_gha.py  sync.py
devenv/lib/: apt.py  archive.py  args.py  brew.py  brewfile.py  bun.py  colima.py  config.py  context.py  direnv.py  docker.py  fs.py  gcloud.py  github.py  limactl.py  modules.py  node.py  pnpm.py  proc.py  repository.py  rosetta.py  tenv.py  trufflehog.py  uv.py  venv.py  volta.py
devenv/lib_check/: brew.py  types.py
lib/: archive.py  brew.py  direnv.py  fs.py  github.py  proc.py  volta.py
lib/gh-act/: Brewfile  Dockerfile  Makefile  apt-install  docker-build.sh  github-arch.sh  github-python-versions.sh  hostedtoolcache-python.sh  hostedtoolcache-ruby.sh  hostedtoolcache.sh
lib_check/: brew.py  types.py
libdevinfra/: README.md  lol.py  pyproject.toml
libdevinfra/libdevinfra/: jobs.py
scripts/: bump-version.sh
tests/: conftest.py  test_bootstrap.py  test_exec.py  test_main.py  test_pythons.py  test_sync.py  test_var.py  utils.py
tests/brew/: test_add_brew_to_shellrc.py  test_clone_brew.py  test_create_dirs.py  test_install.py  test_symlink_brew.py
tests/checks/: test_colimaDiskSpace.py  test_credStore.py  test_dockerConfig.py
tests/doctor/: test_attempt_fix.py  test_filter_failing_checks.py  test_load_checks.py  test_prompt_for_fix.py  test_run_checks.py
tests/doctor/devenv/checks/: bad_check.py  bad_fix.py  broken_check.py  broken_fix.py  failing_check.py  failing_check_with_msg.py  no_check.py  no_name.py  no_tags.py  passing_check.py  passing_check_with_no_fix.py
tests/github/: test_add_to_known_hosts.py  test_check_ssh_access.py  test_check_ssh_authentication.py  test_check_sso_configuration.py  test_generate_and_configure_ssh_keypair.py
tests/lib/: test_apt.py  test_archive.py  test_args.py  test_brew.py  test_direnv.py  test_fs.py  test_github.py  test_node.py  test_proc.py  test_repository.py  test_venv.py  test_volta.py
tests/proc/: test_quote.py  test_run.py  test_xtrace.py
tests/volta/: test_are_volta_and_node_installed.py  test_build_url.py  test_determine_platform.py  test_download_and_unpack_archive.py  test_install.py  test_install_volta.py  test_populate_volta_home_with_shims.py
