[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentry_libdevinfra"
version = "0.0.1"
authors = [
  { name="Joshua Li", email="joshua.li@sentry.io" },
]
description = "useful python routines for devinfra @ sentry.io"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  "typing_extensions",
]

[tool.setuptools.packages]
find = {}

[tool.black]
line-length = 80
target-version = ['py311']
skip-magic-trailing-comma = true

[tool.mypy]
python_version = "3.11"
strict = true

# disallow Any typing:
disallow_any_unimported = true
# there's too many Any's in typeshed:
disallow_any_expr = false
disallow_any_decorated = true
disallow_any_explicit = true

implicit_reexport = false

warn_no_return = true
warn_unreachable = true

allow_redefinition = true
